Removed the specific fixes for the image spacing issue since it is now fixed globally.

--- a/sass/partials/_quicktab-block.scss
+++ b/sass/partials/_quicktab-block.scss
@@ -1,9 +1,6 @@
 /**
  * This SASS is for the Future Students Testimonial feature
  */
-
-.quicktabs_main img {display: block;}
-
 .quicktab-block {
   overflow: hidden;
   position: relative;
