--- a/sass/partials/_testimonials-block.scss
+++ b/sass/partials/_testimonials-block.scss
@@ -43,9 +43,6 @@
     display: block;
     padding: 0;
     max-width: 100%;
-    img {
-      display: block;
-    }
   }
 }
 
